fix layout on mobile madscape

--- a/app/assets/stylesheets/header.css.scss
+++ b/app/assets/stylesheets/header.css.scss
@@ -136,3 +136,16 @@ a:hover {
 	}
 }
 
+@media only screen 
+and (min-device-width : 320px) 
+and (max-device-width : 568px) 
+and (orientation : landscape) { 
+	.main-text {
+		margin-top: 3rem;
+	}
+}
+
+
+
+
+
